--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ flyway {
 	url = 'jdbc:mysql://localhost:3306/olx?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC'
 	user = 'root'
 	password = '123123123'
+	schemas = ['olx']
 }
 
 apply plugin: 'java'
