--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/olx?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=123123123
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#Configure hibernate
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/olx?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123123123
 
 #Flyway config
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+#Configure hibernate
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=validate
