add Template Engine thymeleaf, create Web MVC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.jpa.generate-ddl=false
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=validate
+
+#thymeleaf
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template=true
+spring.thymeleaf.template-resolver-order=1
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.suffix=.html
