--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+	implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
 	implementation('org.flywaydb:flyway-core')
 	compile('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
